--- a/index.html
+++ b/index.html
@@ -14,9 +14,5 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <button class="btn btn-accent btn-block">Buy Now</button>
-    <a href="#" class="btn btn-primary btn-block">Buy Now</a>
-    <a href="" class="btn btn-outline btn-block">Buy now</a>
-  </body>
+  <body></body>
 </html>
