--- a/componets/callout.html
+++ b/componets/callout.html
@@ -4,7 +4,7 @@
       <h2 class="callout__heading">Ready To Get Started?</h2>
       <p>
         Choose the hosting provider that helps you start easy, build fast, and
-        grow strong! It’s risk-free with our 14-day money back guarantee.
+        grow strong! It's risk-free with our 14-day money back guarantee.
       </p>
     </div>
     <a href="#" class="btn btn-secondary btn-stretched">Get Started</a>
