--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="http://" />
     <meta property="og:url" content="http://moshified.com" />
-    <title>Moshify - Go Online for Just $10</title>
+    <title>Chansful - Advertising Website for deployment tools</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
