--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Deploy your website in less than 60 seconds."
+      content="Chansful is an advertising website for high-performance/User-Friendly deployment tools"
     />
-    <meta property="og:title" content="Moshify... " />
-    <meta property="og:description" content="Moshify... " />
+    <meta
+      property="og:title"
+      content=">Chansful - Advertising Website for deployment tools"
+    />
+    <meta
+      property="og:description"
+      content="Chansful is an advertising website for high-performance/User-Friendly deployment tools"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="http://" />
-    <meta property="og:url" content="http://moshified.com" />
+    <meta property="og:url" content="https://chansful.netlify.app/" />
     <title>Chansful - Advertising Website for deployment tools</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
